Basic setup with sass and project structure

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,12 @@
-<h2 id="title">Welcome to Ember.js</h2>
-
-{{outlet}}
+<header class="header">
+	 <span>АФИША</span>
+</header>
+<section class="slider">
+	<span>Стоит пойти</span>
+</section>
+<section class="events">
+	<span>Концерты</span>
+</section>
+<section class="footer">
+	Подвальная часть сайта
+</section>
