Added susy & breakpoints

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,12 +1,7 @@
 <header class="header">
 	 <span>АФИША</span>
 </header>
-<section class="slider">
-	<span>Стоит пойти</span>
-</section>
-<section class="events">
-	<span>Концерты</span>
-</section>
+{{outlet}}
 <section class="footer">
 	Подвальная часть сайта
 </section>
