--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,9 +1,37 @@
+<section class="hero">
+	<a href="#"><img class="event__image" src="images/bilan.jpg"></a>
+	<div class="hero__info">
+		<div class="hero__name">Дима Билайн</div>
+		<div class="hero__date-place">15 сентября 2015 | СДК «Фетисов Арена»</div>
+		<button class="btn btn--simple btn--white hero__btn">Купить билеты</button>
+	</div>
+</section>
+
 <div class="wrapper">
-	<section class="slider">
-		<span>Стоит пойти</span>
-	</section>
-	
-	<section class="events">
-		<span>Концерты</span>
-	</section>
-</div>sussy
+	<ul class="events grid grid--gutters grid--1of3">
+		<li class="event grid-cell">
+			<a href="#"><img class="event__image" src="http://lorempixel.com/800/500/people"></a>
+			<div class="event__container">
+				<div class="event__name">Рок-группа «Алиса»</div>
+				<div class="event__date-place">15 сентября 2015 | СДК «Фетисов Арена»</div>
+				<button class="btn btn--simple btn--pink btn--sm">Купить билеты</button>
+			</div>
+		</li>
+		<li class="event grid-cell">
+			<a href="#"><img class="event__image" src="http://lorempixel.com/800/500/people"></a>
+			<div class="event__container">
+				<div class="event__name">Рок-группа «Алиса»</div>
+				<div class="event__date-place">15 сентября 2015 | СДК «Фетисов Арена»</div>
+				<button class="btn btn--simple btn--pink btn--sm">Купить билеты</button>
+			</div>
+		</li>
+		<li class="event grid-cell">
+			<a href="#"><img class="event__image" src="http://lorempixel.com/800/500/people"></a>
+			<div class="event__container">
+				<div class="event__name">Рок-группа «Алиса»</div>
+				<div class="event__date-place">15 сентября 2015 | СДК «Фетисов Арена»</div>
+				<button class="btn btn--simple btn--pink btn--sm">Купить билеты</button>
+			</div>
+		</li>
+	</ul>
+</div>
