--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,11 @@
 <header class="header">
-	 <span>АФИША</span>
+	<div class="logo"><a href="#">АФИША</a></div>
 </header>
+	
 {{outlet}}
-<section class="footer">
-	Подвальная часть сайта
-</section>
+
+{{!-- <section class="footer">
+	<div class="wrapper">
+		<p>Подвальная часть сайта</p>
+	</div>
+</section> --}}
