--- a/app/styles/base/_typography.scss
+++ b/app/styles/base/_typography.scss
@@ -8,7 +8,7 @@ $small-lh: 			20px;
 
 // шрифты
 $header-ff: 		"Open Sans", "Helvetica Neue", sans-serif;
-$base-ff: 			"Open Sans", "Helvetica Neue", sans-serif;
+$base-ff: 			"Gotham Pro", "Helvetica Neue", sans-serif;
 $alt-ff: 			"Helvetica Neue", Arial, sans-serif;
 
 // TODO: Посчитать по золотому или по минорной ноте
