--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,7 @@
 <header class="header">
-	<div class="logo"><a href="#">АФИША</a></div>
+	<div class="wrapper">
+		{{link-to 'АФИША' 'index' class="logo"}}
+	</div>
 </header>
 	
 {{outlet}}
