--- a/app/styles/base/_typography.scss
+++ b/app/styles/base/_typography.scss
@@ -7,7 +7,7 @@ $base-lh: 			1.250em;
 $small-lh: 			20px;
 
 // шрифты
-$header-ff: 		"Open Sans", "Helvetica Neue", sans-serif;
+$header-ff: 		"Gotham Pro", "Helvetica Neue", sans-serif;
 $base-ff: 			"Gotham Pro", "Helvetica Neue", sans-serif;
 $alt-ff: 			"Helvetica Neue", Arial, sans-serif;
 
