--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -19,7 +19,7 @@
 				<div class="event__container">
 					<div class="event__name">{{event.title}}</div>
 					<div class="event__date-place">{{event.date}} | {{event.place}}</div>
-					{{link-to 'Купить билеты' 'event' event class="btn btn--simple btn--pink btn--sm"}}
+					{{link-to 'Купить билеты' 'event' event class="btn btn--simple btn--pink btn--md"}}
 				</div>
 			</li>
 		{{/each}}
