--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -94,34 +94,65 @@ ul {
 .wrapper {
 	@extend .cf;
 
-	max-width: 60em;
+	max-width: em(1080px);
 	margin: 0 auto;
 	padding-left: ($base-spacing * 2);
 	padding-right: ($base-spacing * 2);
 }
 
-.header {
-	// @extend .grid,
-	// 			.grid--center;
+.paper {
+	@extend 	.cf;
 	
-	position: absolute;
+	box-shadow: 0 4px 8px rgba($black, 0.14);
+	background-color: $white;
+}
+
+
+
+// ==================================================
+// Nav-bar
+// ==================================================
+
+.nav-bar {
+	@extend 	.grid,
+				.grid--center;
+	
+	position: fixed;
+	width: 100%;
+	min-width: 60em;
 	top: 0;
 	left: 0;
-	width: 100%;
-	padding-top: ($base-spacing * 4);
-	z-index: 1;
+	font-family: "GothamProLight";
+	height: 56px;
+	background-color: #0A032A;
+	color: $white;
+
+	z-index: 10;
+
+}
+
+.nav-bar__nav {
+	a {
+		margin-left: 40px;
+		
+		&:hover {
+			border-bottom: 1px solid rgba(255,255,255,0.4);
+		}
+	}
 }
 
 .logo {
-	@extend .grid-cell;
+	@extend 	.grid-cell,
+				.grid-cell--auto;
 	
+	background-color: $brand-color;
+	width: 246px;
+	font-family: "Avenir Next";
 	text-align: center;
-	font-size: em(24px);
 	font-weight: 600;
 	letter-spacing: 2px;
-	color: $white;
-	font-family: "Avenir Next";
-	font-weight: 700;
+	line-height: 56px;
+	font-size: em(24px);
 }
 
 
@@ -129,16 +160,15 @@ ul {
 // Hero unit
 // ==================================================
 .hero {
-	
 	color: $white;
-	height: 624px;
+	height: 648px;
 	overflow: hidden;
-
+	margin-top: 56px;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 
-	font-weight: 100;
+	// font-weight: 100;
 }
 
 .hero-wrapper {
@@ -158,6 +188,7 @@ ul {
 	// На болших экранах:
 	font-size: em(48px);
 	padding-bottom: 24px;
+	font-family: "GothamProLight";
 
 }
 
@@ -174,7 +205,7 @@ ul {
 // ==================================================
 // Events block
 // ==================================================
-.events {
+.events__list {
 	@extend 	.grid,
 				.grid--gutters,
 				.grid--1of3;
@@ -188,36 +219,49 @@ ul {
 	}
 }
 
-.event {
+.event__item {
 	@extend .grid-cell;
+
 }
 
-.event__container {
-	@extend 	.cf;
-	
-	background-color: $white;
-	padding: 12px 12px 24px 12px;
+.item__about {
 	text-align: center;
+	padding: 12px 12px 24px 12px;
 }
 
-.event__name {
+.item__name {
+	font-family: "GothamProMedium";
 	font-size: em(21px);
 	line-height: em(28px);
-	font-weight: 500;
 	padding-bottom: 2px;
 }
 
-.event__date-place {
+.item__date-place {
 	font-size: $micro-fz;
-	padding-bottom: $base-spacing * 2;
+	margin-bottom: ($base-spacing * 2);
 }
 
-@import 'layout/event-page';
+.buy-tickets {
+	display: block;
+}
+
+@import 'layout/event';
 
 
+.footer {
+	@extend 	.grid,
+				.grid--center;
+	text-align: center;
+	color: $white;
+	background-color: #0A032A;
+	height: 56px;
+	
+	font-family: "GothamProLight";
+}
 
-
-
+.copyright {
+	@extend .grid-cell;
+}
 
 
 
