--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,8 +1,8 @@
 <header class="nav-bar">
 	{{link-to 'АФИША' 'index' class="logo"}}
 	<nav class="nav-bar__nav">
-		<a href="#">Контакты</a>
-		<a href="#">Как купить билеты?</a>
+		{{link-to 'Контакты' 'contacts'}}
+		{{link-to 'Как купить билеты?' 'help'}}
 	</nav>
 </header>
 	
