--- a/app/styles/components/_buttons.scss
+++ b/app/styles/components/_buttons.scss
@@ -1,7 +1,7 @@
 .btn {
 		border: 1px solid transparent;
 		border-radius: 3px;
-		transition: $base-transition;
+		transition: all 0.2s ease-in-out;
 		outline: none; 
 		white-space: nowrap;
 		vertical-align: middle;
